Enforce centralized calculation system
- Create calculation enforcer to ensure all calculations go through integrated system
- Add validation and audit capabilities for calculation tracking
- Create legacy redirects for backward compatibility with deprecation warnings
- Add calculation validation scripts to detect unauthorized calculations
- Update API route to use calculation enforcer with audit tracking
- Add deprecation warnings to old calculation files
- Create consolidation script to identify and fix calculation violations
- Ensure no calculations happen outside the centralized system

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "validate-data": "tsx scripts/validate-data.mts",
-    "bump-version": "tsx scripts/bump-version.mts"
+    "bump-version": "tsx scripts/bump-version.mts",
+    "validate-calculations": "tsx scripts/validate-calculations.ts",
+    "consolidate-calculations": "tsx scripts/consolidate-calculations.ts"
   },
   "dependencies": {
     "@types/papaparse": "^5.3.0",
